tests/fail/repeat_too_much_args.avm
push int16(10)
rep 1 2 3
